--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Page setup -->
   <meta charset="utf-8">
-  <title>Your title here</title>
+  <title>Congrong Ren - Personal Website</title>
   <meta name="description" content="A brief description of your site for search engines">
   <meta name="author" content="Information about the author here">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
