--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1>Congrong Ren</h1>
 
     <ul class="icon-list">
-      <li><img src="figures/icons/email.png" alt="email" class="icon"> <a href="">ren <i>[dot]</i> 452 <i>[at]</i> osu <i>[dot]</i> edu</a></li>
+      <li><img src="figures/icons/email.png" alt="email" class="icon"> <a href="">ren [DOT] 452 [AT] osu [DOT] edu</a></li>
       <li><img src="figures/icons/github.png" alt="github" class="icon"> <a href="https://github.com/rcrcarissa">Github</a></li>
       <li><img src="figures/icons/google_scholar.png" alt="google_scholar" class="icon"> <a href="https://scholar.google.com/citations?user=P3dKoAoAAAAJ&hl=en&oi=ao">Google Scholar</a></li>
   </ul>
