--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             Please refer to the full list on <a href="https://scholar.google.com/citations?user=P3dKoAoAAAAJ&hl=en&oi=ao">Google Scholar</a>.
           </p>
           <ul class="publications-list">
-            <li><b>Congrong Ren</b>, Robert Hager, Randy Michael Churchill, Albert Mollén, Seung-Hoe Ku, Choong-Seock Chang, and Hanqi Guo, "Fast and Invertible Simplicial Approximation of Magnetic-Following Interpolation for Visualizing Fusion Plasma Simulation Data," <i>Computer Graphics Forum</i> e70120. doi: <a href="https://doi.org/10.1111/cgf.70120">10.1111/cgf.70120</a>.</li>
-            <li><b>Congrong Ren</b>, Xin Liang, and Hanqi Guo, "A Prediction‐Traversal Approach for Compressing Scientific Data on Graphics Processing Units," <i>Computer Graphics Forum</i>, vol. 43, no. 3, pp. 1–12, Aug. 2024. doi: <a href="https://doi.org/10.1111/cgf.15097">10.1111/cgf.15097</a>.</li>
+            <li><b>Congrong Ren</b>, Robert Hager, Randy Michael Churchill, Albert Mollén, Seung-Hoe Ku, Choong-Seock Chang, and Hanqi Guo, "Fast and Invertible Simplicial Approximation of Magnetic-Following Interpolation for Visualizing Fusion Plasma Simulation Data," <i>Computer Graphics Forum</i>, p. e70120. doi: <a href="https://doi.org/10.1111/cgf.70120">10.1111/cgf.70120</a>.</li>
+            <li><b>Congrong Ren</b>, Xin Liang, and Hanqi Guo, "A Prediction‐Traversal Approach for Compressing Scientific Data on Graphics Processing Units," <i>Computer Graphics Forum</i>, vol. 43, no. 3, pp. 1–12 (p. e15097), Aug. 2024. doi: <a href="https://doi.org/10.1111/cgf.15097">10.1111/cgf.15097</a>.</li>
             <li><b>Congrong Ren</b>, Sheng Di, Longtao Zhang, Kai Zhao, and Hanqi Guo, "An Error-Bounded Lossy Compression Method with Bit-Adaptive Quantization for Particle Data," <i>arXiv preprint</i>, arXiv: <a href="https://arxiv.org/abs/2404.02826">2404.02826</a>, 2024.</li>
         </ul>
         </div>
